@@ -1,6 +1,8 @@
 package com.tp.backend.service;
 
 import com.tp.backend.dto.banda.*;
+import com.tp.backend.dto.personaDetenida.PersonaDetenidaResponse;
+import com.tp.backend.dto.sucursal.SucursalResponse;
 import com.tp.backend.exception.BadRequestException;
 import com.tp.backend.exception.NotFoundException;
 import com.tp.backend.model.Banda;
@@ -9,6 +11,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class BandaService {
@@ -21,13 +24,46 @@ public class BandaService {
 
     @Transactional(readOnly = true)
     public List<BandaResponse> listar() {
-        return repo.findAll().stream().map(b -> new BandaResponse(b.getId(), b.getNumeroBanda(), b.getNumeroMiembros())).toList();
+        return repo.findAll().stream().
+                map(b -> {
+                    BandaResponse res = new BandaResponse(b.getId(), b.getNumeroBanda(), b.getNumeroMiembros());
+                    if (b.getPersonasDetenidas() != null) {
+                        res.setPersonasDetenidas(b.getPersonasDetenidas().stream()
+                                .map(p -> new PersonaDetenidaResponse(
+                                        p.getId(),
+                                        p.getCodigo(),
+                                        p.getNombre(),
+                                        p.getApellido(),
+                                        null
+                                ))
+                                .collect(Collectors.toList()));
+                    }
+                    return res;
+
+                })
+                .toList();
+
+
     }
 
     @Transactional(readOnly = true)
     public BandaResponse obtener(Long id) {
         Banda b = repo.findById(id).orElseThrow(() -> new NotFoundException("Banda no encontrada: " + id));
-        return new BandaResponse(b.getId(),b.getNumeroBanda(), b.getNumeroMiembros());
+
+        BandaResponse res = new BandaResponse(b.getId(), b.getNumeroBanda(), b.getNumeroMiembros());
+        if (b.getPersonasDetenidas() != null) {
+            res.setPersonasDetenidas(b.getPersonasDetenidas().stream()
+                    .map(p -> new PersonaDetenidaResponse(
+                            p.getId(),
+                            p.getCodigo(),
+                            p.getNombre(),
+                            p.getApellido(),
+                            null
+                    ))
+                    .collect(Collectors.toList()));
+        }
+        return res;
+
     }
 
     @Transactional
@@ -43,6 +79,12 @@ public class BandaService {
     @Transactional
     public BandaResponse actualizar(Long id, BandaUpdateRequest req) {
         Banda b = repo.findById(id).orElseThrow(() -> new NotFoundException("Banda no encontrada: " + id));
+
+
+        b.setNumeroBanda(req.getNumeroBanda());
+        b.setNumeroMiembros(req.getNumeroMiembros());
+
+
         if (
                 repo.existsByNumeroBanda(req.getNumeroBanda()) &&
                         !b.getNumeroBanda().equals(req.getNumeroBanda())
